--- a/webapp/app/views/karaoke/index.haml
+++ b/webapp/app/views/karaoke/index.haml
@@ -2,6 +2,8 @@
   %head
     %title MPlayer Karaoke - V0.2
     %object#ktop
-  %frameset{:rows=>'67%,33%'}
-    %frame{:src=>"monitor", :name=>'monitor'}
-    %frame{:src=>"search",  :name=>'search'}
+  %frameset{:cols=>'25%,75%'}
+    %frame{:src=>"song_content", :name=>'content'}
+    %frameset{:rows=>'67%,33%'}
+      %frame{:src=>"monitor", :name=>'monitor'}
+      %frame{:src=>"search",  :name=>'search'}
