--- a/webapp/app/views/layouts/karaoke.haml
+++ b/webapp/app/views/layouts/karaoke.haml
@@ -13,7 +13,8 @@
         td
           :border-bottom 1px dotted #ccccff
           :border-left   1px solid #ccccff
-          :padding 0 3px
+          :padding       0 3px
+          :font-size     0.9em
         tr
           :border-bottom 1px solid
         a:link
