--- a/webapp/app/views/karaoke/song_content.haml
+++ b/webapp/app/views/karaoke/song_content.haml
@@ -20,19 +20,37 @@
       font-size: 0.8em
       a
         :color #e8e
+    #float_menu
+      :position         fixed
+      :right            0%
+      :width            15px
+      :top              0px
+      :padding          3px
+      :border           1px dotted
+      :background-color #663
 
-- ofc = ""
-- cache do
-  - @lygroup.each do |grname, slist|
-    %a{:name=>grname}
-      %hr/
-    .small_content
-      - (['0'] + ('A'..'Z').to_a).each do |achar|
-        = link_to(achar, "##{achar}")
-    - slist.each do |arec|
+- cache(:admin=>session[:admin]) do
+  - lkeys = @lygroup.keys.sort
+  #float_menu
+    - lkeys.each do |achar|
+      = link_to(achar, "##{achar}")
       %br/
-      -# link_to(arec.song, {:action=>:lyrics, :lid=>arec.id}, {:target=>'lyrics'})
+  - lkeys.each do |grname|
+    - namelist = @lygroup[grname]
+    %a{:name=>grname}
+      %div
+    - namelist.keys.sort_by{|a| a.downcase}.each do |name|
+      - songs = namelist[name]
+      - s0    = songs.first
+      %br/
+      - if s0.lyric
+        = link_to(s0.song, {:action=>:lyrics, :lid=>s0.lyric.id}, {:target=>'lyrics'})
+      - else
+        = s0.song
       %span.artlink
-        = arec.class
-        = arec.song
-        -#= link_to(arec.artist, {:action=>:queue, :id=>arec.id}, {:target=>'monitor'})
+        = ": "
+        - songs.map do |s|
+          - saname = s.artist.empty? ? "unknown" : s.artist
+          = link_to("[#{saname}]", {:action=>:queue, :id=>s.id}, {:target=>'monitor'})
+          - if session[:admin]
+            = link_to_remote("x", :url=>{:action=>:command, :id=>:delfile, :item=>s.id}, :confirm=>"Deleting #{s.song}.  Are you sure?")
