--- a/webapp/app/views/karaoke/song_content.haml
+++ b/webapp/app/views/karaoke/song_content.haml
@@ -16,10 +16,6 @@
     a:hover
       :text-decoration underline
       :color red
-    .small_content
-      font-size: 0.8em
-      a
-        :color #e8e
     #float_menu
       :position         fixed
       :right            0%
@@ -51,6 +47,6 @@
         = ": "
         - songs.map do |s|
           - saname = s.artist.empty? ? "unknown" : s.artist
-          = link_to("[#{saname}]", {:action=>:queue, :id=>s.id}, {:target=>'monitor'})
+          = link_to("[#{saname}]", {:action=>:queue, :id=>s.id}, {:target=>'monitor', :title=>"Queue #{s0.song}"})
           - if session[:admin]
             = link_to_remote("x", :url=>{:action=>:command, :id=>:delfile, :item=>s.id}, :confirm=>"Deleting #{s.song}.  Are you sure?")
