Add update sypport for ksel

--- a/webapp/app/views/karaoke/monitor.haml
+++ b/webapp/app/views/karaoke/monitor.haml
@@ -18,12 +18,13 @@
       :left 0%
       :width 100%
       :bottom  0px
-      :background-color #cccccc
+      :background-color #448
       :border-top 1px dotted
       :padding-top 5px
     .hozlist
       li
-        :border          1px solid #aaaaaa
+        :border           1px solid #aaaaaa
+        :background-color #dd8
     #body
       :background-color #111
     #td
