Add volume Add config Break out MPlayerRC to just deal with RC interface

--- a/webapp/app/views/karaoke/lyric_content.haml
+++ b/webapp/app/views/karaoke/lyric_content.haml
@@ -23,7 +23,7 @@
 
 - ofc = ""
 - cache do
-  - @lygroup.each do |grname, slist|
+  - @lygroup.sort.each do |grname, slist|
     %a{:name=>grname}
       %hr/
     .small_content
