--- a/webapp/app/views/karaoke/monitor.haml
+++ b/webapp/app/views/karaoke/monitor.haml
@@ -49,6 +49,7 @@
     - rtype = (rcount == curplay) ? "#ccccff" : ""
     - rclass, symbol = (@playlist.pl_songs[index].state == 1) ? ["disable", "+"] : ["", "-"]
     %tr{:class=>rclass, :id=>"row_#{rcount}",:bgcolor=>rtype}
+      %td= rcount
       %td= link_to("#{symbol}", {:action=>'command', :id=>'toggle_state', :item=>index})
       = render(:partial=>'song', :object=>arec, :locals=>{:rcount=>rcount, :role=>:monitor})
     - rcount += 1
