--- a/webapp/app/views/layouts/karaoke.haml
+++ b/webapp/app/views/layouts/karaoke.haml
@@ -3,7 +3,7 @@
     %title= @page_title
     - if @page_refresh
       = "<meta http-equiv='refresh' content='#{@page_refresh}'/>"
-    = javascript_include_tag "prototype"
+    = javascript_include_tag "prototype", "effects"
     %style{:type=>'text/css'}
       :sass
         table
@@ -40,7 +40,24 @@
             :color #ccc
             a
               :color #ccc
+        .message
+          :position         absolute
+          :left             100px
+          :top              100px
+          :padding          20px
+          :border           3px solid
+        .error
+          :background-color #f88
+        .warning
+          :background-color #ff8
+        .info
+          :background-color #8ff
+
       = @content_for_page_style
 
   %body
+    - flash.each do |key, msg|
+      %div{:class=>[key, 'message'], :id=>"notice_#{key}"}= msg
+      %script{:type=>"text/javascript"}
+        setTimeout("new Effect.Fade('notice_#{key}');", 1500)
     = yield
