Update controller and fix truncation of mplayer monitor output

--- a/webapp/app/views/ikaraoke/index.haml
+++ b/webapp/app/views/ikaraoke/index.haml
@@ -17,6 +17,9 @@
       %label Song:
       %input{:name => "song", :type => "text"}/
     .row
+      %label Author:
+      %input{:name => "author", :type => "text"}/
+    .row
       %label Rating:
       %input{:name => "rating", :type => "text"}/
   %a.whiteButton{:type=>"submit", :href=>"#"} Search
